--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "--legacy-peer-deps": "^0.0.1-security.6",
     "@expo-google-fonts/montserrat": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -22,6 +25,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-svg": "^15.12.0"
   },
   "devDependencies": {
