--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^4.0.2",
-    "react-native-svg": "^15.12.0"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "^15.12.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
