--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "^15.12.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "lottie-react-native": "5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
