--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^9.6.11",
     "formik": "^2.4.6",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-root-siblings": "^5.0.1",
+    "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "^15.12.0",
-    "yup": "^1.6.1",
-    "lottie-react-native": "5.1.6"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
