--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "^15.12.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "react-native-paystack-webview": "4.1.4",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
