--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native-root-siblings": "^5.0.1",
     "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "13.9.0",
     "yup": "^1.6.1",
     "react-native-paystack-webview": "4.1.4",
     "react-native-webview": "13.2.2",
